# autoguard

./: .env.example  .env.example_thirdparty  Cargo.toml  Dockerfile  container-compose.yml  dev.sh  mongo.sh  old-Dockerfile
auto/: buildah.sh  container-make-docker.sh  container-make-podman.sh  container-make.sh  container-make_podman.sh
src/: db.rs  doc.rs  embed.rs  main.rs  mention.rs  on_message.rs  ticket.rs
src/events/: on_message.rs
