[package]
name = "autoguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reywen = {version = "0.1.28", path = "../Reywen-Revolt"}
reywen = {version = "0.1.28"}
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
futures-util = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0.109"